--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
 		"url": "git://github.com/catberry/catberry-oauth2-client.git"
 	},
 	"main": "./index.js",
+	"browser": {
+		"./lib/OAuth2FlowFactory.js": "./browser/OAuth2FlowFactory.js"
+	},
 	"devDependencies": {
 		"istanbul-harmony": "~0.3.0",
 		"coveralls": "^2.11.1",
