--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 	},
 	"main": "./index.js",
 	"browser": {
-		"./lib/OAuth2FlowFactory.js": "./browser/OAuth2FlowFactory.js"
+		"./lib/OAuth2FlowFactory.js": "./browser/OAuth2FlowFactory.js",
+		"./lib/ResourceServer.js": "./browser/ResourceServer.js"
 	},
 	"devDependencies": {
 		"istanbul-harmony": "~0.3.0",
