--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
 		"./lib/OAuth2FlowFactory.js": "./browser/OAuth2FlowFactory.js",
 		"./lib/ResourceServer.js": "./browser/ResourceServer.js"
 	},
+	"dependencies": {
+		"catberry-uri": "^1.2.1"
+	},
 	"devDependencies": {
 		"istanbul-harmony": "~0.3.0",
 		"coveralls": "^2.11.1",
 		"catberry-locator": "^1.0.0",
+		"promise": "^6.0.0",
+		"express": "^4.0.0",
 		"mocha": "^1.0.0",
 		"jscs": "^1.6.0",
 		"jshint": "^2.5.0"
