--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "catberry-oauth2-client",
-	"version": "2.0.4",
+	"version": "2.0.5",
 	"author": "Denis Rechkunov <denis.rechkunov@gmail.com>",
 	"description": "OAuth 2.0 Client Plugin for Catberry Framework",
 	"homepage": "https://github.com/catberry/catberry-oauth2-client",
@@ -21,18 +21,18 @@
 		"./lib/ResourceServer.js": "./browser/ResourceServer.js"
 	},
 	"peerDependencies": {
-		"catberry": "^4.0.0"
+		"catberry": "^4.0.0 || ^5.0.0"
 	},
 	"dependencies": {
 		"catberry-uri": "^2.1.0"
 	},
 	"devDependencies": {
-		"istanbul-harmony": "~0.3.1",
+		"istanbul-harmony": "~0.3.12",
 		"coveralls": "^2.11.2",
-		"catberry-locator": "^1.1.2",
-		"promise": "^6.1.0",
+		"catberry-locator": "^1.1.4",
+		"promise": "^7.0.1",
 		"express": "^4.11.2",
-		"mocha": "^2.1.0",
+		"mocha": "^2.2.4",
 		"jscs": "~1.6.2",
 		"jshint": "^2.6.0"
 	},
