--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 	},
 	"devDependencies": {
 		"istanbul-harmony": "~0.3.12",
-		"coveralls": "^2.11.2",
+		"codecov.io": "^0.1.2",
 		"catberry-locator": "^1.1.4",
 		"promise": "^7.0.1",
 		"express": "^4.11.2",
