--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "catberry-oauth2-client",
-	"version": "2.0.7",
+	"version": "2.0.8",
 	"author": "Denis Rechkunov <denis.rechkunov@gmail.com>",
 	"description": "OAuth 2.0 Client Plugin for Catberry Framework",
 	"homepage": "https://github.com/catberry/catberry-oauth2-client",
@@ -21,7 +21,7 @@
 		"./lib/ResourceServer.js": "./browser/ResourceServer.js"
 	},
 	"peerDependencies": {
-		"catberry": "^4.0.0 || ^5.0.0"
+		"catberry": "^4.0.0 || ^5.0.0 || ^6.0.0"
 	},
 	"dependencies": {
 		"catberry-uri": "^2.1.0"
