--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
 	"dependencies": {
 		"catberry-uri": "^3.1.0"
 	},
+	"peerDependencies": {
+		"catberry": "^8.0.0",
+		"catberry-uhr": "^5.0.0"
+	},
 	"devDependencies": {
 		"istanbul": "~0.4.2",
 		"codecov": "^1.0.1",
